--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "blogging API using CRUD functions",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "uuid": "^3.0.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
